--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
           rel="stylesheet" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1"
           crossorigin="anonymous" />
-      <!-- <link rel="stylesheet" href="style.css" /> -->
+      <link rel="stylesheet" href="style.css" />
       <link rel="shortcut icon" href="./favicon.ico">
+      
   </head>
 
 <body> 
@@ -54,18 +55,17 @@
                     <div class="profile-image">
                         <img src="https://i.ibb.co/JHjYgmv/profile.png" alt="Ryan Adlard">
                     </div>
-                    <h1 class="profile-name" id="nombre">Ryan Adlard</h1>
+                    <h1 class="profile-name" id="nombre">Alan Gabales</h1>
                     <h2 class="profile-profession">Web Designer</h2>
                     <div class="profile-social" id="profile-social">
                         <a href="www.dribbble.com" class="fab fa-dribbble"></a>
                         <a href="www.twitter.com" class="fab fa-twitter"></a>
-                        <a href="www.github.com" class="fab fa-github"></a>
+                        <a href="https://github.com/dashboard" class="fab fa-github"></a>
                         <a href="www.spotify.com" class="fab fa-spotify"></a>
                         <a href="www.stackoverflow.com" class="fab fa-stack-overflow"></a>
                     </div>
                 </div>
                 <div class="profile-buttons">
-                    <a href="/myCV.txt" download>DOWNLOAD CV <i class="fas fa-download"></i></a>
                     <a href="#contact">CONTACT ME <i class="fas fa-arrow-right"></i></a>
                 </div>
             </section>
@@ -89,7 +89,7 @@
                                 <span>FREELANCE . . . . </span>Available
                             </div>
                             <div>
-                                <span>ADDRESS . . . . </span>California, USA
+                                <span>ADDRESS . . . . </span>Cebu, Philippines
                             </div>
                         </div>
                     </div>
@@ -245,7 +245,7 @@
             </section>
         </main>
     </div>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
